fixed white space issues under sidebar

--- a/src/styles/_task-review.scss
+++ b/src/styles/_task-review.scss
@@ -18,6 +18,8 @@ $block-class:'task-review';
             background: #f1f1f1;
             position: absolute;
             right: 0;
+            top: 0;
+            bottom: 0;
         }
 
         &__back-link {
